Components/navbar.css
.navbar {
  max-width: 100%;
  height: auto;
  align-items: center;
  display: flex;
  color: var(--text-primary);
  background: var(--background-primary);
  padding: 4px;
  position: relative;
}
.navbar  * {
  display: flex;
  align-items: center;
  /* padding: 4px; */
  background: inherit;
}
.nav-brand {
  flex-basis: content;
  display: flex;
}
.nav-content {
  flex-grow: 1;
  display: flex;
}
.nav-content > * {
  padding: 0px 5px;
}
.nav-end {
  flex-basis: content;
  display: flex;
}
.nav-btn {
  padding: var(--space-xs);
  outline: none;
  border: 0px;
  border-radius: 0.2rem;
  font-family: "Merriweather Sans", sans-serif;
  display: inline-block;
  font-size: 1rem;
  cursor: pointer;
  transition: all 0.25s ease;
  color: var(--white);
  background: var(--primary);
}

#menu-icon {
  display: none;
}
.menu-label {
  display: none;
}

.submenu {
  position: relative;
  border-radius: 4px;
}
.submenu-text{
    cursor: pointer;
    font-size: 1rem;
}
.submenu-text::after {
  content: "▼";
  font-size: 0.8em;
}
.submenu > ul {
  display: none;
  position: absolute;
  top:2rem;
  /* padding-top: 1rem; */
  background: inherit;
  list-style-type: none;
  text-align: start;
}
#submenu-input{
    display: none;
}
.submenu li {
  padding: 2px;
  display: inline-block;
  width: max-content;
}
#submenu-input:checked ~ ul {
  display: block;
}
#submenu-input:checked ~ .submenu-text::after{
    content:"▲";
}
.nav-float-rt {
  position: absolute;
  top: 0;
  right: 3rem;
}
@media screen and (max-width: 768px) {
  .navbar {
  display: block;
  max-height: 100vh;
  overflow-x: auto;
  }
  .navbar > div {
    margin-right: auto;
    display: block;
  }
  .nav-brand {
    width: max-content;
  }
  .nav-content > * {
    padding:5px;
  }
  .menu-label {
    display: inline-block;
    position: absolute;
    right: 10;
    cursor: pointer;
  }
  #menu-icon:checked ~ .nav-content{
    transition: all 2s ease;
    display: none;
  }
  #menu-icon:checked ~ .menu-label::after {
    content: "☰";
    font-size: 2rem;
  }
  #menu-icon:not(:checked) ~ .menu-label::after {
    content: "✖";
    font-size: 2rem;
  }
  .submenu > ul {
    position: relative;
  }
  #submenu-input:checked ~ ul {
    display: flex;
    flex-direction: column;
    width: 98%;
  }
}

